<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:weightSum="6">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/reserve_room"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:counterOverflowTextAppearance="@color/red"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/purple_500"
            app:endIconMode="clear_text"
            app:startIconDrawable="@mipmap/outline_home_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:weightSum="6">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/reserve_seat"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:counterOverflowTextAppearance="@color/red"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/purple_500"
            app:endIconMode="clear_text"
            app:startIconDrawable="@mipmap/outline_airline_seat_recline_normal_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:weightSum="6">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/reserve_cookie"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:counterEnabled="true"
            app:counterTextColor="@color/purple_500"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_text"
            app:helperTextEnabled="true"
            app:startIconDrawable="@mipmap/outline_cookie_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:weightSum="12">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="11"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/tv_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />


                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />


                <TextView
                    android:id="@+id/tv_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minLines="2"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/purple_500" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_reserve"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/reserve"
            app:icon="@mipmap/outline_rocket_launch_black_24" />
    </LinearLayout>

</LinearLayout>